[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/player_instance.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Viewport.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.97

[sub_resource type="SphereShape" id=6]
radius = 0.426864

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.45, 0.318, 0.45 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Sprite3D/Viewport")

[node name="player_instance" type="KinematicBody"]
script = ExtResource( 1 )

[node name="body_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.109, 0 )
shape = SubResource( 1 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="kick_area" type="StaticBody" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="kick_collision" type="CollisionShape" parent="Spatial/kick_area"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
shape = SubResource( 6 )

[node name="feet_collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.075, 0 )
shape = SubResource( 4 )

[node name="player_model" type="Spatial" parent="."]
transform = Transform( 1.65, 0, 0, 0, 1.65, 0, 0, 0, 1.65, 0, -1.45, 0 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="SpotLight" type="SpotLight" parent="rotation_helper"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.338777, 0.914977 )
light_color = Color( 0.85098, 0.847059, 0.537255, 1 )
light_energy = 10.0
shadow_enabled = true
spot_range = 15.0
spot_attenuation = 10.0
spot_angle_attenuation = 3.0

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( -1, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -0.999999, 0, 1.4, -4.4 )
current = true

[node name="network_tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="movement_tween" type="Tween" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35, 0 )
billboard = 1
texture = SubResource( 5 )

[node name="Viewport" type="Viewport" parent="Sprite3D"]
size = Vector2( 40, 14 )
render_target_v_flip = true
script = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprite3D/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "A"
align = 1
valign = 1
uppercase = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="popupMesg" type="Label" parent="UI"]
anchor_left = 2.0
anchor_top = 2.0
anchor_right = 2.0
anchor_bottom = 2.0
rect_scale = Vector2( 2, 2 )
text = "Popup Message"
align = 1
valign = 1

[node name="staminaBar" type="ProgressBar" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 300.0
margin_bottom = 14.0
value = 100.0

[node name="KillerSpotlight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 3.29183, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.0
spot_angle = 16.9673

[connection signal="timeout" from="network_tick_rate" to="." method="_on_network_tick_rate_timeout"]
